# cedis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: throughput.rs
src/: config.rs  connection.rs  error.rs  glob.rs  keywatcher.rs  lib.rs  main.rs  pubsub.rs  resp.rs  scripting.rs  server.rs  slowlog.rs
src/command/: bitmap.rs  geo.rs  hash.rs  hyperloglog.rs  key.rs  list.rs  mod.rs  pubsub.rs  scripting.rs  server_cmd.rs  set.rs  sorted_set.rs  stream.rs  string.rs  transaction.rs
src/persistence/: aof.rs  mod.rs  rdb.rs
src/replication/: backlog.rs  master.rs  mod.rs  replica.rs
src/store/: entry.rs  mod.rs
src/types/: bitmap.rs  geo.rs  hash.rs  hyperloglog.rs  list.rs  mod.rs  rstring.rs  set.rs  sorted_set.rs  stream.rs
tests/: integration_test.rs
