[package]
name = "cedis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
redis = { version = "0.27", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full", "test-util"] }

[[bin]]
name = "cedis"
path = "src/main.rs"

[[bin]]
name = "cedis-cli"
path = "src/bin/cedis-cli.rs"
